@@ -1,3 +1,10 @@
+2009-08-28  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* Mono.Debugging.Evaluation/ObjectValueAdaptor.cs:
+	* Mono.Debugging.Evaluation/NRefactoryEvaluator.cs: Allow
+	  calling a method of the class of the current
+	  debugging-scope. Fixes bug #525258.
+
 2009-07-22  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* Makefile.am:
